--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "moongose": "^1.0.0",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
