--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "moongose": "^1.0.0",
@@ -23,7 +24,6 @@
   },
   "scripts": {
     "start": "node server.js",
-
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
