--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "moongose": "^1.0.0",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.0",
