--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "moongose": "^1.0.0",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.13",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
