--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "moongose": "^1.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-avatar": "^5.0.3",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
