--- a/server/package.json
+++ b/server/package.json
@@ -12,18 +12,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "moongose": "^1.0.0",
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
-    "nodemailer": "^6.9.13",
-    "react": "^18.3.1",
-    "react-avatar": "^5.0.3",
-    "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.5",
-    "web-vitals": "^2.1.4"
+    "nodemailer": "^6.9.13"
   },
   "scripts": {
     "start": "node server.js",
